text overflow fixed in cart and toastify

--- a/frontend/src/Components/Toaster/Toaster.scss
+++ b/frontend/src/Components/Toaster/Toaster.scss
@@ -62,9 +62,10 @@
   }
   
   &__name {
+    text-overflow: ellipsis; 
+    max-width: 100%;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
     font-size: 16px;
     font-weight: 600;
   }
